@@ -1,8 +1,8 @@
 Package: phylobase
 Type: Package
 Title: Base package for phylogenetic structures and comparative data
-Version: 0.6.2
-Date: 2010-08-06
+Version: 0.6.3
+Date: 2011-02-24
 Depends: methods, grid, ape(>= 2.1), Rcpp (>= 0.8.3)
 LinkingTo: Rcpp
 Suggests: adephylo, MASS, RUnit
